<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourite_fragment">Favourite Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="text_item">Text Item</string>
    <string name="about_the_book">About the book</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="price">Price</string>
    <string name="_4_5">4.5</string>
    <string name="sagar_pandey">Sagar Pandey</string>
    <string name="ahmdebad">Ahmdebad</string>
</resources>
